# Prog_01Es

./: .gitignore  CMakeLists.txt  README.md  areacerchio.c  areacerchio.h  biggestword.c  ciclifor.c  distanzaes.c  es1.c  es147.c  es2.c  es3.c  es4.c  esassoluto.c  escorona.c  eserciziprova.c  eserciziprova2.c  eserciziprova3.c  eserciziprova4.c  esprovainter.c  giochino.c  kesimolib.c  kesimolib.h  kesimomax.c  libk.c  libk.h  library.c  library.h  main.c  main2.c  main3.c  maxcol.c  maxcolfunc.c  maxcolfunc.h  merge.c  mergelib.c  mergelib.h  password.c  perfectNum.c  printeins.c  (+7 more)
Relazione_Palumbo_Stefano/: index.html
Relazione_Palumbo_Stefano/C/Traccia 1 - Gioco delle coppie di carte/: CarteLib.c  CarteLib.h  CoppieDiCarte.c
Relazione_Palumbo_Stefano/C/Traccia 2 - Riciclatore Automatico/: Riciclatore.c  RiciclatoreLib.c  RiciclatoreLib.h
Relazione_Palumbo_Stefano/Pagine aggiuntive/: coppiedicarte.html  riciclatore.html
sorts/: sorts.c  sortslib.c  sortslib.h
