cmake_minimum_required(VERSION 3.17)
project(untitled2 C)

set(CMAKE_C_STANDARD 99)

add_executable(untitled2 main.c)
add_executable(main2 main2.c)
add_executable(main3 password.c)
add_executable(giochino giochino.c)
add_executable(main4 main3.c areacerchio.c)
add_executable(tabverit tabverit.c)
add_executable(ciclifor ciclifor.c)
add_executable(maxcol maxcol.c maxcolfunc.c)
add_executable(es147 es147.c libk.c)
add_executable(es1  es1.c)
add_executable(es2 es2.c)
add_executable(es3 es3.c)
add_executable(es4 es4.c)
add_executable(escorona escorona.c library.c)
add_executable(esassoluto esassoluto.c library.c)
add_executable(distanzaes distanzaes.c library.c)
add_executable(printes printeins.c library.c)
add_executable(sommarr sommarr.c library.c)
add_executable(merge merge.c mergelib.c)
add_executable(test test.c)
add_executable(perfectNum perfectNum.c)